增加了zgc垃圾收集的日志附加